[package]
name = "BlockchainCli"
version = "0.1.0"
edition = "2021"

[dependencies]
blockchaintree = { git = "https://github.com/AploCoin/BlockChainTree", branch = "main" }
clap = { version = "4.5.8", features = ["derive"] }
hex = "0.4.3"
primitive-types = "0.12.2"
secp256k1 = { version = "0.29.0", features = ["rand-std"] }
tokio = "1.38.0"
